deploy/kustomize/overlays/hml/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soat-api
spec:
  replicas: 1
