deploy/kustomize/overlays/hml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soat-api
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soat-api
                port:
                  name: http
